Fixed invisible form text.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,10 @@ a {
   color: var(--tectcolour);
 }
 
+input {
+  color: #595959;
+}
+
 .wrappercontent {
   top: 7vh;
   max-width: 1536px;
